working on mobile issue

--- a/style.css
+++ b/style.css
@@ -112,4 +112,7 @@ img {
   h3 {
     display: none;
   }
+  h2 {
+    display: none;
+  }
 }
